--- a/luhn-algorithm/test.html
+++ b/luhn-algorithm/test.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script type = "text/javascript" src = "training-js-luhn/src/index.js"></script>
+		<script type = "text/javascript" src = "src/index.js"></script>
 	</head>
 
 </html>
